--- a/client/views/about.html
+++ b/client/views/about.html
@@ -2,8 +2,10 @@
   {{> navbar}}
   <div class="container">
     <div class="card-panel">
-      <h4 class="blue-text text-darken-2">About</h4>
-      <p>This is the about page. Enter you information here.</p>
+      <h4 class="blue-text text-darken-2">关于</h4>
+      <p>G24lab:我们是一个纯无线互联网创新团队,核心成员来自微软、阿里、百度、平均年龄 26 岁。 作为产品技术双驱动型团队,我们产品的定位是搭建电子信息消费品(包括视频,文字)与 用户个人桥梁的数据云服务。
+我们崇尚黑客精神:Hackers believe that something can always be better, and that nothing is ever complete.
+我们的创业观是和一群喜欢的人做一件喜欢的事,Work hard, Play hard。</p>
     </div>
   </div>
   {{> footer}}
