--- a/client/views/contact.html
+++ b/client/views/contact.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="card-panel">
 			<form id="contact">
-  			<h4 class="blue-text text-darken-2">Contact</h4>
+  			<h4 class="blue-text text-darken-2">联系我们</h4>
   			<div class="input-field">
     			<input type="text" name="name" class="mui-form-control" placeholder="Name" required>
   			</div>
