--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -3,14 +3,15 @@
     <div class="container">
       <div class="row">
         <div class="s12 center">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text"></h5>
+          <p class="grey-text text-lighten-4">
+          </p>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container center">
-        © 2015 Meteor Material Blog
+        © 2015 非正常人类研究中心 & ♥ in G24
       </div>
     </div>
   </footer>
