--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,5 +1,125 @@
 <template name="home">
-  {{> navbar}}
-  {{> posts_list}}
-  {{> footer}}
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong>G</strong><small>24</small></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">关于</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">关于</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </div>
+  </nav>
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header center orange-text">头条百家</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">神一样的头条，你懂的</h5>
+      </div>
+      <div class="row center">
+        <div class="col s6" style="margin-top:1.5em">
+          <div>
+        <a href="http://koudaiv.com/static/file/app-official-0.9.2.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v0.9.2 下载</a>
+      </div>
+        <div style="margin-top:1.5em">
+        <img src="http://qrapi.cli.im/qr?data=http%253A%252F%252Fkoudaiv.com%252Fstatic%252Ffile%252Fapp-official-0.9.2.apk&level=H&transparent=false&bgcolor=%23ffffff&forecolor=%23000000&blockpixel=12&marginblock=1&logourl=&size=280&kid=cliim&key=d3b7a7fa4214311ed5a1c968d7208c4e" height=100 width=100 >
+        </div>
+      </div>
+        <div class="col s4" style="margin-top:1.5em">
+          <div>
+        <a href="https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8" id="download-button" class="btn-large waves-effect waves-light black">Iphone版 下载</a>
+      </div>
+        <div>
+        <img  style="margin-top:1.5em" src="http://qrapi.cli.im/qr?data=https%253A%252F%252Fitunes.apple.com%252Fus%252Fapp%252Ftou-tiao-bai-jia%252Fid987333155%253Fl%253Dzh%2526ls%253D1%2526mt%253D8&level=H&transparent=false&bgcolor=%23ffffff&forecolor=%23000000&blockpixel=12&marginblock=1&logourl=&size=280&kid=cliim&key=22e11bcebca6ecd7b1bdf9a00309b348" height=100 width=100 >
+        </div>
+      </div>
+      </div>
+      
+      <br><br>
+
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="mdi-image-flash-on"></i></h2>
+            <h5 class="center">独特观点解析</h5>
+
+            <p class="light">独特观点解析不一样的大事件</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="mdi-social-group"></i></h2>
+            <h5 class="center">全视角</h5>
+
+            <p class="light">全方位视角，不同次元环绕你的脑洞</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="mdi-action-settings"></i></h2>
+            <h5 class="center">一个</h5>
+
+            <p class="light">你需要知道的大事件，一个就够了</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <br><br>
+
+    <div class="section">
+
+    </div>
+  </div>
+
+  <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l12 s12">
+          <h5 class="white-text">G24lab</h5>
+          <p class="grey-text text-lighten-4">我们是一个纯无线互联网创新团队,核心成员来自微软、阿里、百度、平均年龄 26 岁。 作为产品技术双驱动型团队,我们产品的定位是搭建电子信息消费品(包括视频,文字)与 用户个人桥梁的数据云服务。
+我们崇尚黑客精神:Hackers believe that something can always be better, and that nothing is ever complete.
+我们的创业观是和一群喜欢的人做一件喜欢的事,Work hard, Play hard</p>
+
+
+        </div>
+        <!-- div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div  -->
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+       <a class="orange-text text-lighten-3" href="#">© 2015 非正常人类研究中心 & ♥ in G24</a>
+      </div>
+    </div>
+  </footer>
+
 </template>
