--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -3,11 +3,11 @@
     <nav>
       <div class="nav-wrapper blue darken-2">
         <div class="container">
-          <a href="/" class="brand-logo">Meteor Material Blog</a>
+          <a href="/" class="brand-logo"><strong>G</strong><small>24</small></a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/">主版</a></li>
+            <li><a href="/about">关于</a></li>
+            <li><a href="/contact">联系我们</a></li>
           </ul>
         </div>
       </div>
