--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,7 @@
     width: 100%;
 }
 .yingdao{
-    width: 40%;height: auto;position: absolute;top:0;right:5%;display: none;
+    width: 40%;height: auto;position: absolute;top:0;right:5%;display:none;
 }
 .bannertitle{
     display:block;width: 90%;height: 88px;position:absolute;left:5%;bottom:10%;font-size: 22px;
@@ -30,7 +30,7 @@
     width: 90%;height:16px;position: absolute;left: 5%;bottom:9%;line-height:16px;
 }
 .date{
-      display: block;float:left;font-size: 14px;color:#fff;
+    display: block;float:left;font-size: 14px;color:#fff;
 }
 .time{
     display: block;float:left;font-size: 14px;color:#fff;margin-left:24px ;
@@ -51,11 +51,41 @@
 .card2{
     width: 96%;height:auto;padding:10px;font-size:16px;margin:0 auto;background:#fff;margin-top:15px;  line-height: 25px;
 }
+.cardChild{
+    width: 100%;height:auto;margin-top:10px;font-size:16px;color:#35a6fb;line-height:25px;overflow:hidden;
+}
+.zhezhao{
+    width: 100%;height:300px;background:rgba(0,0,0,0.5);position:relative;position: fixed;top:0;left:0;display: none;z-index:3;
+}
+.zhezhaodownload{
+    width: 80%;height:auto;background:rgba(255,255,255,0.9);border-radius: 2%;padding:10%;position: absolute;left: 10%;top:30%;
+}
+.zhezhaodownload span{
+    display:block;width: 100%;height: 20px;font-size: 16px;text-align: center;line-height: 20px;
+}
+.down{
+    width: 40%;height: auto;margin:0 auto;
+}
+.down img{
+    width: 100%;
+}
+.closeB{
+    width:20px;height: 20px;position: absolute;top:5%;right:5%;
+}
+.closeB img{
+    width: 100%;
+}
+.logodownload{
+    width:60px;height:60px;margin:10% auto;
+}
+.logodownload img{
+    width:100%;
+}
 .pinglun{
     width: 96%;height:auto;background:#fff;margin:0 auto;margin-top:15px;
 }
 .pingluntop{
-width: 100%;height: auto;
+    width: 100%;height: auto;
 }
 .pingluntop img{
     width: 100%;
@@ -70,7 +100,13 @@ width: 100%;height: auto;
     width: 35px;height:35px;float:left;border:2px solid blue;border-radius: 50%;overflow: hidden;
 }
 .pinglunword{
-    width: 84%;height: auto;float:left;margin-left:3%;position: relative;
+    width: 84%;height: auto;float:left;margin-left:3%;position: relative;font-size:16px;color:#35a6fb;line-height:25px;
+}
+.pinglunshu{
+    width: 40px;height: 20px;float:right;margin-top:10px;font-size: 16px;color:#35a6fb;text-align:left;line-height: 20px;
+}
+.pinglunmore{
+    width: 41px;height: 27px;background:url("../img/pingluntu.png");float:right;margin-right:2%;margin-top:10px;
 }
 .pingluntitle{
     display:block;width: 100%;height: 25px;
@@ -122,25 +158,25 @@ width: 100%;height: auto;
     width: 13%;height: 69%;float:left;
 }
 .footertu img{
-    width: 100%;
+    height: 120%;
 }
 .footerword{
-    width: 26%;height:69%;float:left;margin-left:5%;
+    width: 26%;height:59%;float:left;margin-left:5%;
 }
 .bigword{
     width: 120%;height:auto;font-size:20px;color:#fff;
 }
 .sword{
-    width:150%;height:auto;font-size:10px;margin-top:14px;color:#fff;
+    width:150%;height:auto;font-size:10px;margin-top:10px;color:#fff;
 }
 .download{
-    display:inline-block;width: 27%;height:100%;float:left;margin-left:13%;line-height:60px;
+    display:inline-block;width: 37%;height:100%;float:left;margin-left:10%;line-height:60px;
 }
 .download img{
     width: 100%;
 }
 .close{
-    width: 3%;height:100%;float:left;margin-left:7%;display: inline-block;line-height: 50px;
+    width: 3%;height:100%;float:right;margin-left:3%;display: inline-block;margin-top:0 ;
 }
 .close img{
     width:100%;
