--- a/public/css/index.css
+++ b/public/css/index.css
@@ -97,7 +97,7 @@
     width:100%;height:auto;overflow: hidden;margin-top:22px;
 }
 .pinglunperson{
-    width: 35px;height:35px;float:left;border:2px solid blue;border-radius: 50%;overflow: hidden;
+    width: 35px;height:35px;float:left;border-radius: 50%;overflow: hidden;
 }
 .pinglunword{
     width: 84%;height: auto;float:left;margin-left:3%;position: relative;font-size:16px;color:#35a6fb;line-height:25px;
