--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,10 @@
     width: 100%;
 }
 .yingdao{
-    width: 40%;height: auto;position: absolute;top:0;right:5%;display:none;
+    width: 40%;height: auto;position: fixed;top:0;right:5%;display:none;
+}
+.yingdao img{
+    width: 100%;
 }
 .bannertitle{
     display:block;width: 90%;height: 88px;position:absolute;left:5%;bottom:10%;font-size: 22px;
