--- a/public/css/index.css
+++ b/public/css/index.css
@@ -73,10 +73,10 @@
     width: 100%;
 }
 .closeB{
-    width:20px;height: 20px;position: absolute;top:5%;right:5%;
+    width:40px;height: 40px;position: absolute;top:5%;right:5%;
 }
 .closeB img{
-    width: 100%;
+    width: 50%;margin: 20% auto;
 }
 .logodownload{
     width:60px;height:60px;margin:10% auto;
@@ -109,7 +109,7 @@
     width: 40px;height: 20px;float:right;margin-top:10px;font-size: 16px;color:#35a6fb;text-align:left;line-height: 20px;
 }
 .pinglunmore{
-    width: 41px;height: 27px;background:url("../img/pingluntu.png");float:right;margin-right:2%;margin-top:10px;
+    width: 28px;height: 18px;background:url("../img/pingluntu.png");float:right;margin-right:2%;margin-top:10px;
 }
 .pingluntitle{
     display:block;width: 100%;height: 25px;
