--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,7 @@
 *{
     margin:0;padding:0;list-style: none;font-weight: normal;box-sizing: border-box;
 }
+a{-webkit-tap-highlight-color:rgba(0,0,0,0);}
 .header{
     width: 100%;height: 50px;background:#999;position: relative;
 }
