--- a/public/css/index.css
+++ b/public/css/index.css
@@ -68,25 +68,25 @@ img[class=card2]{
     width: 100%;height:300px;background:rgba(0,0,0,0.5);position:relative;position: fixed;top:0;left:0;display: none;z-index:3;
 }
 .zhezhaodownload{
-    width: 60%;height:auto;background:rgba(255,255,255,0.9);border-radius: 2%;padding:20px;position: absolute;left: 20%;top:30%;
+    width: 60%;height:auto;background:rgba(255,255,255,0.9);border-radius: 2%;position: absolute;left: 20%;top:30%;
 }
 /*.zhezhaodownload span{*/
     /*display:block;width: 100%;height: 20px;font-size: 16px;text-align: center;line-height: 20px;*/
 /*}*/
 .down{
-    width: 40%;height: auto;margin:0 auto;
+    width: 40%;height: auto;margin:0px auto 20px auto;
 }
 .down img{
     width: 100%;
 }
 .closeB{
-    width:40px;height: 40px;position: absolute;top:7px;right:7px;
+    width:20px;height: 20px;position: absolute;top:7px;right:7px;
 }
 .closeB img{
-    width: 50%;margin: 20% auto;
+    width: 100%;
 }
 .logodownload{
-    width:60px;height:60px;margin:10% auto;
+    width:60px;height:60px;margin:20px auto;
 }
 .logodownload img{
     width:100%;
