--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -62,7 +62,7 @@ img[class=card2]{
     display:block;width: 100%;height:auto;font-size:16px;margin:0 auto;background:#fff;line-height: 25px;
 }
 .cardChild{
-    width: 100%;height:auto;margin-top:10px;font-size:16px;color:#35a6fb;line-height:25px;overflow:hidden;
+    width: 100%;height:auto;margin-top:10px;font-size:16px;color:#35a6fb;line-height:25px;overflow:hidden;padding:0 5px 5px 5px;
 }
 .zhezhao{
     width: 100%;height:300px;background:rgba(0,0,0,0.5);position:relative;position: fixed;top:0;left:0;display: none;z-index:3;
