--- a/client/views/home.html
+++ b/client/views/home.html
@@ -21,7 +21,7 @@
       <div class="row center">
         <div class="col s6" style="margin-top:1.5em">
           <div>
-        <a href="http://koudaiv.com/static/file/app-official-0.9.2.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v0.9.2 下载</a>
+        <a href="http://baijia-appdownload.oss-cn-qingdao.aliyuncs.com/app-official-release.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v0.9.2 下载</a>
       </div>
         <div style="margin-top:1.5em">
         <img src="http://qrapi.cli.im/qr?data=http%253A%252F%252Fkoudaiv.com%252Fstatic%252Ffile%252Fapp-official-0.9.2.apk&level=H&transparent=false&bgcolor=%23ffffff&forecolor=%23000000&blockpixel=12&marginblock=1&logourl=&size=280&kid=cliim&key=d3b7a7fa4214311ed5a1c968d7208c4e" height=100 width=100 >
