--- a/client/views/home.html
+++ b/client/views/home.html
@@ -24,7 +24,7 @@
         <a href="http://baijia-appdownload.oss-cn-qingdao.aliyuncs.com/app-official-release.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v0.9.2 下载</a>
       </div>
         <div style="margin-top:1.5em">
-        <img src="img/download.png" height=100 width=100 >
+        <img src="imgs/downloadw.png" height=100 width=100 >
         </div>
       </div>
         <div class="col s4" style="margin-top:1.5em">
