--- a/client/views/home.html
+++ b/client/views/home.html
@@ -21,7 +21,7 @@
       <div class="row center">
         <div class="col s6" style="margin-top:1.5em">
           <div>
-        <a href="http://baijia-appdownload.oss-cn-qingdao.aliyuncs.com/app-official-release.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v0.9.2 下载</a>
+        <a href="http://baijia-appdownload.oss-cn-qingdao.aliyuncs.com/app-official-release.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v1.1.2 下载</a>
       </div>
         <div style="margin-top:1.5em">
         <img src="img/Aerweima.png" height=100 width=100 >
@@ -32,7 +32,7 @@
         <a href="https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8" id="download-button" class="btn-large waves-effect waves-light black">Iphone版 下载</a>
       </div>
         <div>
-        <img  style="margin-top:1.5em" src="http://qrapi.cli.im/qr?data=https%253A%252F%252Fitunes.apple.com%252Fus%252Fapp%252Ftou-tiao-bai-jia%252Fid987333155%253Fl%253Dzh%2526ls%253D1%2526mt%253D8&level=H&transparent=false&bgcolor=%23ffffff&forecolor=%23000000&blockpixel=12&marginblock=1&logourl=&size=280&kid=cliim&key=22e11bcebca6ecd7b1bdf9a00309b348" height=100 width=100 >
+        <img  style="margin-top:1.5em" src="img/ioserweima.png" height=100 width=100 >
         </div>
       </div>
       </div>
