--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-  <nav class="light-blue lighten-1" role="navigation">
+  <nav class="light-blue lighten-1" role="navigation" style="background:#fff">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong>G</strong><small>24</small></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">关于</a></li>
@@ -21,7 +21,7 @@
       <div class="row center">
         <div class="col s6" style="margin-top:1.5em">
           <div>
-        <a href="http://baijia-appdownload.oss-cn-qingdao.aliyuncs.com/app-official-release.apk" id="download-button" class="btn-large waves-effect waves-light orange">安卓v1.1.2 下载</a>
+        <a href="http://t.cn/RyflWxE" id="download-button" class="btn-large waves-effect waves-light orange">安卓v1.1.2 下载</a>
       </div>
         <div style="margin-top:1.5em">
         <img src="img/Aerweima.png" height=100 width=100 >
