--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-  <nav class="light-blue lighten-1" role="navigation" style="background:#fff">
+  <nav class="light-blue lighten-1" role="navigation" style="background:#fff!important;">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong>G</strong><small>24</small></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">关于</a></li>
