--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,6 +1,6 @@
 <template name="home">
-  <nav class="light-blue lighten-1" role="navigation" style="background:#fff!important;">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong>G</strong><small>24</small></a>
+  <nav class="light-blue lighten-1" role="navigation" style="background:#fff!important;box-shadow: none">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong style="color:#202020!important;">G</strong><small style="color:#202020!important;">24</small></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">关于</a></li>
       </ul>
@@ -21,7 +21,7 @@
       <div class="row center">
         <div class="col s6" style="margin-top:1.5em">
           <div>
-        <a href="http://t.cn/RyflWxE" id="download-button" class="btn-large waves-effect waves-light orange">安卓v1.1.2 下载</a>
+        <a href="http://t.cn/RyflWxE" id="download-button" class="btn-large waves-effect waves-light orange" style="background:#6daaec!important;">安卓v1.1.2 下载</a>
       </div>
         <div style="margin-top:1.5em">
         <img src="img/Aerweima.png" height=100 width=100 >
@@ -29,7 +29,7 @@
       </div>
         <div class="col s4" style="margin-top:1.5em">
           <div>
-        <a href="https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8" id="download-button" class="btn-large waves-effect waves-light black">Iphone版 下载</a>
+        <a href="https://itunes.apple.com/us/app/tou-tiao-bai-jia/id987333155?l=zh&ls=1&mt=8" id="download-button" class="btn-large waves-effect waves-light black" style="background:#6daaec!important;">Iphone版 下载</a>
       </div>
         <div>
         <img  style="margin-top:1.5em" src="img/ioserweima.png" height=100 width=100 >
@@ -84,7 +84,7 @@
     </div>
   </div>
 
-  <footer class="page-footer orange">
+  <footer class="page-footer orange" style="background:#bec3c7!important;">
     <div class="container">
       <div class="row">
         <div class="col l12 s12">
