--- a/client/views/home.html
+++ b/client/views/home.html
@@ -2,7 +2,7 @@
   <nav class="light-blue lighten-1" role="navigation" style="background:#fff!important;box-shadow: none">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><strong style="color:#202020!important;">G</strong><small style="color:#202020!important;">24</small></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">关于</a></li>
+        <li><a href="#" style="color:#202020!important;">关于</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
