--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -30,11 +30,11 @@ a{-webkit-tap-highlight-color:rgba(0,0,0,0);}
     width: 100%;
 }
 .bannertitle{
-    display:block;width: 90%;height:40px;font-size: 22px;margin-top:3%;margin-left:5%;
+    display:block;width: 90%;height:auto;font-size: 22px;margin-top:3%;margin-left:5%;
     line-height: 26px;color:#fff;
 }
 .bannertime{
-    width: 90%;height:16px;margin-bottom:9% ;margin-left:5%;
+    width: 90%;height:16px;margin-bottom:9% ;margin-left:5%;margin-top:1%;
 }
 .date{
     display: block;float:left;font-size: 14px;color:#fff;
