--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,40 @@
 *{
     font-family: SourceHanSansCN-Light;
 }
+.jia{
+    width:100%;height:100%;position: absolute;top:0;left:0;z-index: 999;background: #000;
+}
+.loader {
+    margin: 20em auto;
+}
+.loader--glisteningWindow {
+    width: 0.25em;
+    height: 0.25em;
+    box-shadow: 0.70711em 0.70711em 0 0em #2ecc71, -0.70711em 0.70711em 0 0.17678em #9b59b6, -0.70711em -0.70711em 0 0.25em #3498db, 0.70711em -0.70711em 0 0.17678em #f1c40f;
+    animation: gw 1s ease-in-out infinite, rot 2.8s linear infinite;
+}
+@keyframes rot {
+    to {
+        transform: rotate(360deg);
+    }
+}
+@keyframes gw {
+    0% {
+        box-shadow: 0.70711em 0.70711em 0 0.125em #2ecc71, -0.70711em 0.70711em 0 0.39017em #9b59b6, -0.70711em -0.70711em 0 0.5em #3498db, 0.70711em -0.70711em 0 0.39017em #f1c40f;
+    }
+    25% {
+        box-shadow: 0.70711em 0.70711em 0 0.39017em #2ecc71, -0.70711em 0.70711em 0 0.5em #9b59b6, -0.70711em -0.70711em 0 0.39017em #3498db, 0.70711em -0.70711em 0 0.125em #f1c40f;
+    }
+    50% {
+        box-shadow: 0.70711em 0.70711em 0 0.5em #2ecc71, -0.70711em 0.70711em 0 0.39017em #9b59b6, -0.70711em -0.70711em 0 0.125em #3498db, 0.70711em -0.70711em 0 0.39017em #f1c40f;
+    }
+    75% {
+        box-shadow: 0.70711em 0.70711em 0 0.39017em #2ecc71, -0.70711em 0.70711em 0 0.125em #9b59b6, -0.70711em -0.70711em 0 0.39017em #3498db, 0.70711em -0.70711em 0 0.5em #f1c40f;
+    }
+    100% {
+        box-shadow: 0.70711em 0.70711em 0 0.125em #2ecc71, -0.70711em 0.70711em 0 0.39017em #9b59b6, -0.70711em -0.70711em 0 0.5em #3498db, 0.70711em -0.70711em 0 0.39017em #f1c40f;
+    }
+}
 .navbox{
     width:64%;height:auto;position: fixed;left:18%;top:4%;z-index: 99;
 }
