--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -72,13 +72,12 @@ a{
     width:28%;height:2px;margin:18px auto;background:#6cc1fb ;
 }
 .mainWord{
-    width:95%;height:auto;margin:0 auto 13px auto;font-size: 13px;color:#323232;
-}
+    width:100%;height:auto;margin:0 auto;font-size: 13px;color:#323232;text-indent: 2em;line-height: 26px;}
 .iconBox{
     width:100%;height:auto;margin:60px auto 0 auto;overflow: hidden;
 }
 .iconInner{
-    width:25%;height:auto;float:left;
+    width:25%;height:auto;float:left;position: relative;
 }
 .iconInner>a{
     display: block;width:88px;height:auto;margin:0 auto;
@@ -93,8 +92,7 @@ a{
     width:100%;height:auto;margin:20px auto 0 auto;text-align: center;font-size: 13px;color: #858585;
 }
 .tiyanBox{
-    display:block;width:36%;height:auto;margin:30px auto 0 auto;overflow: hidden;
-}
+    display:block;width:auto;height:auto;margin:30px auto 0 auto;position: relative;bottom:0;left:50%;margin-left:-18%;}
 .tiyan{
     display:block;font-size: 13px;color:#979797;float: left;
 }
