--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -24,16 +24,22 @@ a{
     width:100%;
 }
 .logoBox2{
-    width:307px;height:auto;margin-top:10px;
+    width:240px;height:auto;margin-top:10px;
 }
 .logoBox2>img{
     width:100%;
 }
 .navBox{
-    width:50%;height:auto;float:right;overflow: hidden;margin-top:4%;
+    width:60%;height:auto;float:right;overflow: hidden;margin-top:4%;
 }
 .navBox>li>a{
-    font-size:16px;color:#878787;float:right;margin-right:6.2%;
+    font-size:14px;color:#878787;float:right;margin-right:4.3%;
+}
+.navBoxB{
+    width:60%;height:auto;float:right;overflow: hidden;margin-top:4%;
+}
+.navBoxB>li>a{
+    font-size:14px;color:#878787;float:right;margin-right:4.3%;
 }
 .sanjiao{
     width: 0;
@@ -69,38 +75,39 @@ a{
    width:28%;height:auto;margin:56px auto 0 auto;font-size: 32px;color:#323232;text-align: center;
 }
 #underline{
-    width:28%;height:2px;margin:18px auto;background:#6cc1fb ;
+    width:28%;height:2px;margin:18px auto 14px auto;background:#6cc1fb ;
 }
 .mainWord{
-    width:100%;height:auto;margin:0 auto;font-size: 13px;color:#323232;text-indent: 2em;line-height: 26px;
+    width:100%;height:auto;margin:0 auto;font-size: 16px;color:#323232;text-indent: 2em;line-height: 26px;
 }
 .iconBox{
     width:100%;height:auto;margin:60px auto 0 auto;overflow: hidden;
 }
 .iconInner{
-    width:25%;height:auto;float:left;position: relative;
+    width:33%;height:auto;float:left;position: relative;
 }
 .iconInner>a{
-    display: block;width:88px;height:auto;margin:0 auto;
+    display: block;width:110px;height:auto;margin:0 auto;
 }
 .iconInner>a>img{
     width:100%;
 }
 .iconWord1{
-    width:100%;height:auto;margin:30px auto 0 auto;text-align: center;font-size: 20px;color:#323232;
+    width:100%;height:auto;margin:28px auto 0 auto;text-align: center;font-size: 24px;color:#323232;
 }
 .iconWord2{
-    width:100%;height:auto;margin:20px auto 0 auto;text-align: center;font-size: 13px;color: #858585;
+    width:100%;height:auto;margin:16px auto 0 auto;text-align: center;font-size: 17px;color: #858585;
 }
 .tiyanBox{
-    display:block;width:35%;height:auto;margin:30px auto 0 auto;background: red;position: relative;bottom:0;left:50%;margin-left:-12.5%;
+    display:block;width:90%;height:auto;margin:26px auto 0 auto;position: relative;bottom:0;left:50%;margin-left:-45%;overflow: hidden;padding: 0 0 0 30%;
 }
 .tiyan{
-    display:block;font-size: 13px;color:#979797;float: left;
+    display:block;font-size: 16px;color:#979797;float: left;
 }
 .tiyanBox>a>img{
     display: block;width:10px;height:auto;float: left;margin-left:10px;
 }
+
 /*main*/
 footer{
     width:100%;height:100px;margin-top:80px;background: url("../img/footer.png");font-size: 15px;color:#fff;text-align: center;line-height: 100px;
@@ -210,6 +217,7 @@ footer{
 .icon3Box{
     width:40%;height:auto;float:left;margin-top:180px;
 }
+
 #icon3{
     width:124px;height:124px;background:url("../imgServe/icon3.png");background-size: cover;margin:0 auto;
 }
@@ -240,7 +248,7 @@ footer{
 }
 /*card4结束*/
 .num5{
-    width:98px;height:102px;background: url("../imgServe/num5.png");background-size: cover;position: absolute;top:-30px;left:0;
+    width:98px;height:102px;background: url("../imgServe/num5.png");background-size: cover;position: absolute;top:110%;left:0;z-index: 999;
 }
 #icon5{
     width:124px;height:124px;background:url("../imgServe/icon5.png");background-size: cover;margin:0 auto;
@@ -259,6 +267,64 @@ footer{
 }
 .card5W{
     width:140%;height:auto;font-size: 14px;color:#fff;text-align: center;position: absolute;bottom:-40px;left: 50%;margin-left: -70%;
+}
+
+.icon5Box{
+    width:40%;height:auto;margin:100px auto 0 auto;
+}
+.imgA{
+    width:200px;height:auto;margin:30px auto 0 auto;
+}
+.imgA>img{
+    width:100%
+}
+.imgA_1{
+    width: 267px;height:auto;margin:30px auto 0 auto;
+}
+.imgA_1>img{
+    width:100%
+}
+.imgA_jian{
+    width:40px;height:40px;background: url("../imgServe/write.png");margin:24px auto ;background-size: cover
+}
+.imgA_word{
+    width:100%;height:auto;margin:0 auto;
+}
+.imgA_word1{
+    width:30%;height:auto;float: left;margin-left: 5%;padding: 5% 0;
+}
+.imgA_word1>img{
+    width:100%
+}
+.imgA_2{
+    width:460px;height:auto;margin:0 auto;margin-left:26.5%
+}
+.imgA_2>img{
+    width:100%
+}
+.imgB{
+    width:200px;height:auto;margin:40px auto 0 auto;
+}
+.imgB>img{
+    width:100%
+}
+.imgB_1{
+    width:393px;height:auto;margin:48px auto 0 auto;
+}
+.imgB_1>img{
+    width:100%
+}
+.imgB_word1{
+    width: 21.25%;height:auto;float: left;margin-left:5%;
+}
+.imgB_word1>img{
+    width: 100%;
+}
+.imgC_1{
+    width:100%;height: auto;padding: 0 20%;margin:70px auto 0 auto;
+}
+.imgCbox{
+    width: 62.5%;height:auto;position: fixed;top:40%;
 }
 /*card6结束*/
 #icon6{
@@ -350,6 +416,36 @@ footer{
 .card83Boxnum{
     width:40px;height:40px;border-radius: 50%;background: #6cc1fb;font-size: 16px;text-align: center;line-height: 40px;margin:24px auto;
 }
+/*card8结束*/
+#icon9{
+    width:124px;height:124px;background:url("../imgServe/icon9.png");background-size: cover;margin:0 auto;
+}
+.num9{
+    width:98px;height:102px;background: url("../imgServe/num9.png");background-size: cover;position: absolute;top:-30px;left:0;
+}
+.card9Box{
+    width: 100%;height: auto;margin:50px auto 0 auto;
+}
+.card91{
+    width:40%;height:auto;float: left;
+}
+.card91>img{
+    width: 100%;
+}
+.card9Jian{
+    width:40px;height:40px;background: url("../imgServe/write.png");background-size: cover;float: left;margin-top:20%;transform: rotate(-90deg);margin-left:4%;
+
+}
+.card92{
+    width: 40%;height: auto;float: left;margin-left: 4%;border: 2px solid #fff;padding: 10px;
+}
+.card9Title{
+    width:100%;height: auto;font-size: 18px;color: #ffffff;text-align: center;line-height: 22px
+}
+.card9Word{
+    width: 100%;height: auto;font-size: 14px;color: #ffffff;line-height: 22px;margin-top:10px
+}
+/*card9结束*/
 .blue{
     background:#6cc1fb ;padding: 2px;
 }
@@ -393,15 +489,16 @@ footer{
 .jiansw{
     width:80%;height:auto;margin:0 auto;font-size: 1.25em;color: #5a5a5a;text-align: center;
 }
-
+.card5_1,.card5_2,.card5_3{display: block}
+.phoneCard5_1,.phoneCard5_2,.phoneCard5_3{display: none}
 @media screen and (max-width:992px){
-    .topBox{display: none}
+    .topBox,.card5_1,.card5_2,.card5_3,.nav{display: none}
     .mainBox{display: none}
     footer{display: none}
     .cInner1{
         display: none;
     }
-    .callP{
+    .callP,.phoneCard5_1,.phoneCard5_2,.phoneCard5_3{
         display:block;
     }
     .bannerboxP{
@@ -438,17 +535,18 @@ footer{
         width:252px;height:88px;position: absolute;top:70%;left:50%;margin-left:-126px;background: url("../imgPhone/rectP.png");font-size:2em;text-align: center;line-height: 88px;color:#6cc1fb;
     }
 
+
     /*产品页面*/
-    .num1,.num2,.num3,.num4,.num5,.num6,.num7,.num8{
+    .num1,.num2,.num3,.num4,.num5,.num6,.num7,.num8,.num9{
         left:50%;margin-left: -44px;top:-48px;width:88px;height:91px
     }
-    #icon1,#icon2,#icon3,#icon4,#icon5,#icon6,#icon7,#icon8{
+    #icon1,#icon2,#icon3,#icon4,#icon5,#icon6,#icon7,#icon8,#icon9{
         width:109px;height:109px
     }
     #icon1{
         margin-top:100px;
     }
-    .card1Box,.card2Box{
+    .card1Box,.card2Box,.card9Box,.icon5Box{
         width:90%;
     }
     .icon2Box,.icon3Box{
@@ -476,7 +574,7 @@ footer{
         width: 139px;height:235px;
     }
     .card5Jian{
-        margin-top: 27%;
+        transform: rotate(0deg);margin:30px auto;margin-left: 30%;
     }
     .card71{
         width:10%;font-size: 20px;padding: 60px 0;margin-top:40%
@@ -529,13 +627,58 @@ footer{
     .circle2_3p{
         width:10px;height: 10px;border-radius: 50%;background: rgba(255,255,255,1);margin:8px auto;
     }
-    .tiyanBox>a>img{
-        width:20px;
-    }
     .iconWord1,.iconWord2,.tiyanBox{
         margin-top:15px;
     }
     .tiyanBox{
         width:50%;
+    }
+    .tiyanBox>a>img{
+        width:20px
+    }
+    .card91{
+        width: 90%;float: none;margin:20px auto 0 auto;
+    }
+    .card9Jian{
+        float: none;transform: rotate(0deg);margin:20px auto
+    }
+    .card92{
+        width: 90%;float: none;
+    }
+    .num5{
+        top:103%
+    }
+    .phoneImgA_1{
+        width:60%;height:auto;margin:20px auto 0 auto;
+    }
+    .phoneImgA_2,.phoneImgB_1{
+        width:100%;height:auto;margin:20px auto 0 auto;
+    }
+    .phoneImgA_1>img,.phoneImgA_2>img,.phoneImgB_1>img,.phoneImgB_2>img{
+        width: 100%;
+    }
+    .phoneWbox{
+        width: 100%;margin:0 auto;overflow: hidden;
+    }
+    .phoneWord{
+        width: 32%;height:auto;float: left;margin-left: 2%;font-size: 16px;color: #fff;border: 1px solid #fff;padding: 3px;text-align: center;
+    }
+    .phoneImgB_2{
+        width:100%;height:auto;margin:0px auto 0 auto;
+    }
+    .phoneBbox{
+        width:100%;height:auto;margin:20px auto 0 auto;overflow: hidden;
+    }
+    .phoneBword{
+       width:40%;height:auto;float: left;margin-left: 15%;
+    }
+    .phoneBword>img{
+        width:100%
+    }
+    .imgCbox{
+        top:110px;
+    }
+    .card51{
+        margin:0 auto
     }
 }
