--- a/public/Web2/css/index.css
+++ b/public/Web2/css/index.css
@@ -85,7 +85,7 @@
     display: block;position: absolute;left:19%;top:50%;font-size: 50px;color:#fff;opacity: 0;
 }
 .word2Tu{
-    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;
+    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;opacity: 0;
 }
 .word2Tu>img{
     width:0;position:absolute;right:0;bottom:0;
@@ -119,7 +119,7 @@
     display: block;position: absolute;right:13%;top:50%;font-size: 50px;color:#fff;opacity: 0;
 }
 .word3Tu{
-    width:460px;height:162px;position: absolute;right:13%;top:47%;z-index: 99;
+    width:460px;height:162px;position: absolute;right:13%;top:47%;z-index: 99;opacity: 0;
 }
 .word3Tu>img{
     width:0;position:absolute;left:0;bottom:0;
@@ -153,7 +153,7 @@
     display: block;position: absolute;left:19%;top:50%;font-size: 50px;color:#fff;opacity: 0;
 }
 .word4Tu{
-    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;
+    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;opacity: 0;
 }
 .word4Tu>img{
     width:0;position:absolute;right:0;bottom:0;
@@ -187,7 +187,7 @@
     display: block;position: absolute;right:13%;top:50%;font-size: 50px;color:#fff;opacity: 0;
 }
 .word5Tu{
-    width:460px;height:162px;position: absolute;right:13%;top:47%;z-index: 99;
+    width:460px;height:162px;position: absolute;right:13%;top:47%;z-index: 99;opacity: 0;
 }
 .word5Tu>img{
     width:0;position:absolute;left:0;bottom:0;
@@ -221,7 +221,7 @@
     display: block;position: absolute;left:19%;top:50%;font-size: 50px;color:#fff;opacity: 0;
 }
 .word6Tu{
-    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;
+    width:460px;height:162px;position: absolute;left:19%;top:47%;z-index: 99;opacity: 0;
 }
 .word6Tu>img{
     width:0;position:absolute;right:0;bottom:0;
