--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -87,16 +87,16 @@ a{
     width:33%;height:auto;float:left;position: relative;
 }
 .iconInner>a{
-    display: block;width:110px;height:auto;margin:0 auto;
+    display: block;width:130px;height:auto;margin:0 auto;
 }
 .iconInner>a>img{
     width:100%;
 }
 .iconWord1{
-    width:100%;height:auto;margin:28px auto 0 auto;text-align: center;font-size: 24px;color:#323232;
+    width:100%;height:auto;margin:28px auto 0 auto;text-align: center;font-size: 28px;color:#323232;
 }
 .iconWord2{
-    width:100%;height:auto;margin:16px auto 0 auto;text-align: center;font-size: 17px;color: #858585;
+    width:100%;height:auto;margin:16px auto 0 auto;text-align: center;font-size: 24px;color: #858585;
 }
 .tiyanBox{
     display:block;width:90%;height:auto;margin:26px auto 0 auto;position: relative;bottom:0;left:50%;margin-left:-45%;overflow: hidden;padding: 0 0 0 30%;
@@ -324,7 +324,7 @@ footer{
     width:100%;height: auto;padding: 0 20%;margin:70px auto 0 auto;
 }
 .imgCbox{
-    width: 62.5%;height:auto;position: fixed;top:20%;
+    width: 62.5%;height:auto;margin:20% auto 0 auto;
 }
 /*card6结束*/
 #icon6{
@@ -630,9 +630,9 @@ footer{
     .iconWord1,.iconWord2,.tiyanBox{
         margin-top:15px;
     }
-    .tiyanBox{
-        width:50%;
-    }
+    /*.tiyanBox{*/
+        /*width:50%;*/
+    /*}*/
     .tiyanBox>a>img{
         width:20px
     }
