--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -50,6 +50,7 @@ a{
 .nav{
     display: block;
 }
+.logoP{display: none}
 @media screen and (max-width:992px){
     .topBox,.nav{display: none}
     .mainBox{display: none}
@@ -70,7 +71,7 @@ a{
         width:100%;height:40px;background: #fff;position: relative;top:0;left:0;overflow: hidden;
     }
     .logoP{
-        width: 30%;height:auto;margin:5% 35%;
+        width: 30%;height:auto;margin:3% 35%;display: block;
     }
     .logoP>img{
         width: 100%;
