--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -50,7 +50,7 @@ a{
 .nav{
     display: block;
 }
-.logoP{display: none}
+.topP{display: none}
 @media screen and (max-width:992px){
     .topBox,.nav{display: none}
     .mainBox{display: none}
@@ -68,10 +68,10 @@ a{
         width:100%;
     }
     .topP{
-        width:100%;height:40px;background: #fff;position: relative;top:0;left:0;overflow: hidden;
+        display:block;width:100%;height:40px;background: #fff;position: relative;top:0;left:0;overflow: hidden;
     }
     .logoP{
-        width: 30%;height:auto;margin:3% 35%;display: block;
+        width: 30%;height:auto;margin:3% 35%;
     }
     .logoP>img{
         width: 100%;
@@ -80,19 +80,19 @@ a{
         width:20px;height:15px;background: url("../imgPhone/btnP.png");background-size: cover;position:absolute;top:50%;margin-top:-8px;right:13px;
     }
     .navP{
-        width:50%;height:auto;position: absolute;top:40px;right:0;z-index: 99;background: rgba(255,255,255,0.9);display: none;
+        width:40%;height:auto;position: absolute;top:50px;right:0;z-index: 99;background: rgba(255,255,255,0.9);display: none;
     }
     .navP li{
-        width:100%;height:35px;border-bottom:1px solid #d2d2d2;padding:12px 22px;
+        width:100%;height:25px;border-bottom:1px solid #d2d2d2;padding:2px 12px;
     }
     .iconP{
-        width:25px;height:25px;float: left;
+        width:15px;height:15px;float: left;
     }
     .iconP>img{
         width:100%;
     }
     .navWord{
-        width:65%;height:35px;float: left;margin-left:20px;text-align: left;line-height: 35px;font-size:1em;color:#333;
+        width:65%;height:25px;float: left;margin-left:20px;text-align: left;line-height: 25px;font-size:10px;color:#333;
     }
     .beginP{
         width:252px;height:88px;position: absolute;top:70%;left:50%;margin-left:-126px;background: url("../imgPhone/rectP.png");font-size:2em;text-align: center;line-height: 88px;color:#6cc1fb;
